infrastructure/base/controllers/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: monitoring
  name: monitoring
