infrastructure/base/controllers/monitoring/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forbid-pods-internet-access
spec:
  podSelector:
    matchExpressions:
      - { key: app.kubernetes.io/name, operator: NotIn, values: [grafana] }
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 192.168.0.0/16

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-only-grafana-egress
spec:
  podSelector:
    matchExpressions:
      - { key: app.kubernetes.io/name, operator: In, values: [grafana] }
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-only-ingress
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alertmanager-smtp-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        # This value will be automatically replaced.
        cidr: 255.255.255.255/32

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-graphana-ingress
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/name: grafana
  ingress:
    - ports:
        - port: grafana
          protocol: TCP
